tests/examples/good/garbage_collector/good052.lat
int main() {
    int[] arr; 
    /*
    for (int i : arr) {
        printInt(arr[i]);
    }*/
    return 0;
}
