tests/examples/bad/array_indexing_not_an_array.lat
int main() {
    int arr;
    arr[0];
    return 1;
}
